@@ -52,3 +52,4 @@ ttyrecord
 *~
 .pc
 debian/patches
+debian/autoreconf.*
