@@ -1,7 +1,3 @@
 usr/include/*
-usr/lib/lib*.a
-usr/lib/lib*.so
-#usr/lib/pkgconfig/*
-usr/lib/*.la
-#usr/share/pkgconfig/*
+usr/lib/*/lib*.so
 usr/share/man/man3/*
