@@ -1,8 +1,9 @@
 termrec (0.17-1) unstable; urgency=medium
 
   * New release.
+  * Convert to dh and dh-autoreconf.
 
- -- Adam Borowski <kilobyte@angband.pl>  Tue, 04 Feb 2014 01:47:53 +0100
+ -- Adam Borowski <kilobyte@angband.pl>  Tue, 04 Feb 2014 02:28:01 +0100
 
 termrec (0.16-1) unstable; urgency=low
 
